omni-tools/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omni-tools
  labels:
    app: omni-tools
spec:
  replicas: 2
  selector:
    matchLabels:
      app: omni-tools
  template:
    metadata:
      labels:
        app: omni-tools
    spec:
      containers:
      - name: omni-tools
        image: iib0011/omni-tools:latest
        ports:
        - containerPort: 80
