omni-tools/service.yml
apiVersion: v1
kind: Service
metadata:
  name: omni-tools-service
spec:
  selector:
    app: omni-tools
  ports:
  - name: omni-tools-http
    protocol: TCP
    port: 80
    targetPort: 80
